[tool.poetry]
name = "jobs-frontend"
version = "0.1.0"
description = "A Streamlit frontend for job data processing."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0"
# Other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
